...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    tools:context=".login.LogInFragment"
    android:id = "@+id/transitionFromLoginActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="right"
        app:layout_constraintBottom_toBottomOf="parent"
...
